--- a/index.html
+++ b/index.html
@@ -209,6 +209,9 @@
 					<h1>git push</h1>
 					Upload changes to remote repository
 				</section>
+				<section>
+					<a href="http://ha7ilm.github.io/gitprez">ha7ilm.github.io/gitprez</a><br />
+				</section>
 			</div>
 		</div>
 <!--
